# words-lookup-bot

./: Cargo.toml  README.md  Secrets.toml.default  TEST_SUMMARY.md
.github/workflows/: clippy_check.yml  deploy.yml  warm_up.yml
src/: formatting.rs  main.rs  service.rs  stands4_client.rs
src/bloc/: common.rs  ext.rs  formatting.rs  help.rs  mod.rs  phrase_lookup.rs  start.rs  suggestions.rs  teapot.rs  thesaurus_lookup.rs  unknown.rs  urban_lookup.rs  word_finder.rs  word_lookup.rs  wordle.rs
src/bot/: inline_bot.rs  lookup_bot.rs  message_bot.rs  mod.rs  runner.rs
src/callback/: callbacks.rs  mod.rs  urban_lookup.rs
src/commands/: command.rs  formatting.rs  help.rs  mod.rs  phrase_lookup.rs  start.rs  teapot.rs  thesaurus_lookup.rs  unknown.rs  urban_lookup.rs  word_lookup.rs  wordle.rs
src/cron/: mod.rs  runner.rs  warm_up.rs
src/datamuse/: client.rs  mod.rs  request.rs  responses.rs
src/format/: ext.rs  formatter.rs  links_provider.rs  mod.rs  word_with_abbr_ext.rs
src/inlines/: debouncer.rs  formatting.rs  inline.rs  inlines.rs  mod.rs  phrase_lookup.rs  suggestions.rs  thesaurus_lookup.rs  urban_lookup.rs  word_lookup.rs
src/mw/: client.rs  entities.rs
src/networking/: api_client.rs
src/server/: mod.rs  runner.rs  warm_up.rs
src/service/: mod.rs  telegram.rs  telegram_bot.rs  telegram_cron.rs  telegram_serve.rs
src/stands4/: auth_middleware.rs  client.rs  config.rs  entities.rs  ext.rs  fix_response_middleware.rs  links_provider.rs  middleware.rs  mod.rs  responses.rs
src/stands4/requests/: mod.rs  search_abbreviations.rs  search_phrase.rs  search_syno.rs  search_word.rs
src/urban/: client.rs  mod.rs  requests.rs  responses.rs
src/wordle/: cache.rs  client.rs  entities.rs  mod.rs  requests.rs
