[package]
name = "words-lookup-bot"
version = "0.16.3"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
chrono = "0.4.41"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
regex = "1.12.2"
rustify = "0.6.1"
rustify_derive = "0.5.4"
serde = "1.0.228"
serde_json = "1.0.148"
string-builder = "0.2.0"
toml = "1.0.0"
urlencoding = "2.1.3"

[dependencies.reqwest]
version = "0.13.0"
features = ["json"]
# after 0.13 enable these:
#default-features = false
#features = [
#    "charset",
#    "http2",
#    "native-tls",
#    "system-proxy",
#    "json",
#    "query",
#]

[dependencies.teloxide]
version = "0.17.0"
features = ["macros"]

[dependencies.tokio]
version = "1.48"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.tokio-cron-scheduler]
version = "0.15.1"
features = ["signal"]
